tests/codegen/compile/runtime/fail/missing_args.stderr
error: Missing field `executor`

error: An error occured while parsing the input.
 --> $DIR/missing_args.rs:3:1
  |
3 | #[runtime::main]
  | ^^^^^^^^^^^^^^^^
